syntax = "proto3";

package auth;

option go_package = ".;____auth";

import "authproto/user.proto";

message CreateUserRequest{
    User user = 1;
}

message CreateUserResponse{
    string success = 1;
}

service AuthService{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
}